--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <div id="Barra_button">
-<input type="text" id="barra_menssagem" autofocus="autofocus" onfocus="this.select()"> <button id="enviar"  onclick="adMens('cliente')" type="submit"> <i class="fa-solid fa-paper-plane"></i></button>
+<input type="text" id="barra_menssagem" autofocus="autofocus" onfocus="this.select()"> <button id="enviar"  onclick="renderMenssagemUsuario()" type="submit"> <i class="fa-solid fa-paper-plane"></i></button>
 </div>
 </body>
 
