--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2d64eeea4e.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="teste.js"></script>
     <link rel="stylesheet" href="folha.css">
     <title> Bot </title>
 </head>
