--- a/config.html
+++ b/config.html
@@ -17,6 +17,12 @@
      </div>
 
      <input type="color" id="color_pick">
+
+     <form action="index.html">
+        <input type="text" id="pergunta">
+        <input type="text" id="resposta">
+        <button onclick="NovoQuest()">envie</button>
+     </form>
 </body>
 <script>
 </script>
