--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2d64eeea4e.js" crossorigin="anonymous"></script>
-    <script src="teste.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="folha.css">
     <title> Bot </title>
 </head>
@@ -21,6 +21,11 @@
      <div id="nav_butt" class="button">
         <a href="config.html" target="_blank"> <p id="barra"> <i class="fa-solid fa-bars"></i></p></a>
      </div>
+  
+        <input type="text" id="pergunta">
+        <input type="text" id="resposta">
+        <button onclick="NovoQuest()">envie</button>
+   
 </div>
 
 <div id="corpo">
