--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body onload="cores()">
 
 <div id="header">
-    <input type="color" id="color_pick" value="#FFC300" onchange="cores()"/>
+    <input type="color" id="color_pick" value="#FFC300"  onchange="cores()"/>
     <div id="test" class="clientes hide" onclick="cores()"><p id="test_txt" ></p></div>
 
      <div id="perfil" ></div> 
@@ -29,6 +29,8 @@
 </div>
 
 <div id="corpo">
+</div>
+<div id="block">
 </div>
 
 
