--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2d64eeea4e.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="Config.css">
+    <script src="Config.js"></script>
     <link rel="stylesheet" href="folha.css">
     <title> Bot </title>
 </head>
@@ -18,13 +20,9 @@
     <div id="test" class="clientes hide" onclick="cores()"><p id="test_txt" ></p></div>
 
      <div id="perfil" ></div> 
-     <div id="nav_butt" class="button">
+     <!-- <div id="nav_butt" class="button">
         <a href="config.html" target="_blank"> <p id="barra"> <i class="fa-solid fa-bars"></i></p></a>
-     </div>
-  
-        <input type="text" id="pergunta">
-        <input type="text" id="resposta">
-        <button onclick="NovoQuest()">envie</button>
+     </div> -->
    
 </div>
 
@@ -37,6 +35,42 @@
 <div id="Barra_button">
 <input type="text" id="barra_menssagem" autofocus="autofocus" onfocus="this.select()"> <button id="enviar"  onclick="renderMenssagemUsuario()" type="submit"> <i class="fa-solid fa-paper-plane"></i></button>
 </div>
+
+<button id="navButton" class="butts" onclick="abrirjanela()"><strong>|||</strong></button>
+    <button id="navButton_fec" class="butts" onclick="fecharjanela()"><strong>|||</strong></button>
+    <div id="janela_config">
+
+        <div id="config_header"> <h2> <u> Configuração </u> </h2></div>
+    
+        <div class="area_cor">
+        <input type="color" value="#FFC300" id="msgCliente" class="Formato"> <label for="msgCliente" id="msgcColor"> Mensagem </label>
+        </div>
+        
+        <h3 id="msgbColor"> Bot </h3>
+        <input type="color" value="#FFC300" id="msgEmpresa" class="Formato"> <br>
+
+        <h3 id="bodyColor"> Fundo nas Mensagens </h3>
+        <input type="color" value="#FFC300" id="bgColor" class="Formato"> <br>
+
+        <h3 id="hBotColor"> Fundo de Perfil </h3>
+        <input type="color" value="#FFC300" id="headerBot" class="Formato"> <br>
+
+
+        <div id="img1" class="imginput"></div>
+        <input id="text1" type="text" alt="">
+        <div id="img2" class="imginput"></div>
+        <input id="text2" type="text" alt="">
+        <div id="img3" class="imginput"></div>
+        <input id="text3" type="text" alt="">
+
+
+        <input id="text4" type="text" alt="">
+        <div id="pergunta" class="CaixaPerguntas"></div>
+        <button onclick="NovoQuest()" id="envie">envie</button>
+        <input id="text5" type="text" alt="">
+        <div id="resposta" class="CaixaRespostas"></div>
+
+    </div>
 </body>
 
 </html>
