--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@
     <button id="navButton" class="butts" onclick="abrirjanela()"><strong>|||</strong></button>
     <button id="navButton_fec" class="butts" onclick="fecharjanela()"><strong>|||</strong></button>
     <div id="janela_config" onmouseleave="fecharjanela()">
-
+    
         <div id="config_header">
             <h2> CONFIGURAÇÕES </h2>
         </div>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="area_cor">
-                <input type="color" value="#FFC300" id="msgEmpresa" onchange="cores()" class="color_formato">
+                <input type="color" value="#70ade7" id="msgEmpresa" onchange="cores()" class="color_formato">
                 <p id="cli_color_label" class="color_label"> Bot </p>
             </div>
 
