--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/folha.css">
     <script src="../js/config.js"></script>
     <link rel="stylesheet" href="../css/Config.css">
+    <script src="../js/botQuest.js"></script>
+
     <title> Bot </title>
 </head>
 
