--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
     <title> Bot </title>
 </head>
 
-<body onload="onload()" id="body">
+<body onload="onload()" id="body" >
 
     <div id="header">
         <div id="test" class="clientes hide" onclick="cores()">
@@ -38,7 +38,7 @@
 
     <button id="navButton" class="butts" onmouseenter="abrirjanela()"><strong>|||</strong></button>
     <button id="navButton_fec" class="butts" onclick="fecharjanela()"><strong>|||</strong></button>
-    <div id="janela_config" onmouseleave="fecharjanela()">
+    <div id="janela_config" >
         <!--  -->
     
         <div id="config_header">
@@ -97,9 +97,9 @@
             </div>
         </div>
         
-        <form action="" id="email_area">
-            <input id="email_input" placeholder="Insira um email para receber os pedidos" type="text" class=""> <button type="submit" class="email_envi gButt"> ENVIAR</button>
-        </form>
+        <div id="email_area">
+            <input id="email_input" placeholder="Insira um email para receber os pedidos" type="text" class=""> <button type="submit" class="email_envi gButt" onclick="definirEmail()"> ENVIAR</button>
+        </div>
 
         <div id="array_area">
             <div class="novo_array">
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <button onclick="NovoQuest()" type="submit" id="envie" class="gButt">enviar</button>
+            <button onclick="NovoQuest()" type="submit" id="envie" class="gButt"></button>
 
             <div class="novo_array">
                 <input id="resposta_input" class="array_input" type="text" placeholder="Insira a Resposta">
@@ -116,7 +116,11 @@
                     <div id="resposta_show" class="array_show"></div>
             </div>
         </div>
+
+        <div id="quest_area">
+            <input type="text" id="quest_input" class="quest_input" placeholder="Insira Uma s Questionário"><button onclick="NovoNQuest()" id="envieQ" class="gButt">enviar</button>
+            <div id="quest_show" class="quest_show"></div>
+        </div>
     </div>
 </body>
-
 </html>
