--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,7 @@
         </div>
         <!-- área do perfil -->
         <div id="perfil"></div>
+        <div id="recomeco" onclick="location.reload()">RECOMEÇAR</div>
     </div>
 
 
@@ -93,7 +94,7 @@
             </div>
         </div>
 
-        
+
         <!-- área das imagens -->
         <div id="backgrounds">
             <h1 id="img_title">Imagem de Fundo</h1>
