--- a/pages/Login.html
+++ b/pages/Login.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../css/geral.css" />
     <link rel="stylesheet" href="../css/Formulario.css" />
+    <link rel="shortcut icon" href="../imgs/perfil.jpg" type="image/x-icon">
   </head>
   <body>
    
+   <!-- pra acessar o bot com a aba de configurações é preciso utilizar um email de administrador uses este: ----|vaniltonc.coelhojr@gmail.com|--- -->
+
     <div class="container">
       <div class="header">
         <h2>Faça seu cadastro!</h2>
