--- a/pages/TelaInicial.html
+++ b/pages/TelaInicial.html
@@ -5,9 +5,11 @@
 <meta charset="UTF-8"> 
 <link rel="stylesheet" type="text/css" href="../css/geral.css"> 
 <link rel="stylesheet" href="../css/geral.css"> 
+    <link rel="shortcut icon" href="../imgs/perfil.jpg" type="image/x-icon">
 </head> 
 <body> 
-    <div class="quatext">
+    <div id="corpo">
+          <div class="quatext">
     
          
             <br>Meu animal é um clínica veterinária/pet shop <br>
@@ -29,6 +31,7 @@
 <form action="Configuracao.html">
     <button class="Login3">Administrador</button>
 </form>
+</div>
   
 </body>
 </html>
