--- a/pages/botCliente.html
+++ b/pages/botCliente.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/Config.css">
     <script src="../js/botQuest.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <link rel="shortcut icon" href="../imgs/perfil.jpg" type="image/x-icon">
     <title> Bot </title>
 </head>
 
