--- a/pages/index.html
+++ b/pages/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://kit.fontawesome.com/2d64eeea4e.js" crossorigin="anonymous"></script>
     <script src="../js/main.js"></script>
     <link rel="stylesheet" href="../css/folha.css">
     <script src="../js/config.js"></script>
     <link rel="stylesheet" href="../css/Config.css">
     <script src="../js/botQuest.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <link rel="shortcut icon" href="../imgs/perfil.jpg" type="image/x-icon">
     <title> Bot </title>
 </head>
  
@@ -120,9 +121,9 @@
             </div>
         </div>
         
-        <div id="email_area">
+        <!-- <div id="email_area">
             <input id="email_input" placeholder="Insira um email para receber os pedidos" type="text" class=""> <button type="submit" class="email_envi gButt" onclick="definirEmail()"> ENVIAR</button>
-        </div>
+        </div> -->
 
         <div id="array_area">
             <div class="novo_array">
